--- a/index-3.html
+++ b/index-3.html
@@ -28,7 +28,7 @@
 <body>
 
 <!-- WRAPPER ALL -->
-<div class="edrea_tm_wrapper_all" data-audio="on">
+<div class="edrea_tm_wrapper_all" data-audio="off">
 
 	<div id="edrea_tm_popup_blog">
 		<div class="container">
@@ -58,7 +58,7 @@
 			<div class="container">
 				<div class="navigation_inner">
 					<div class="logo">
-						<a class="light_logo" href="index.html"><img src="img/logo/logo.png" alt="" /></a>
+						<a class="light_logo" href="index-3.html"><img src="img/logo/logo.png" alt="" /></a>
 					</div>
 					<div class="nav_list_wrap">
 						<div class="menu">
@@ -106,30 +106,23 @@
 		<!-- HERO -->
 		<div class="edrea_tm_section" id="home">
 			<div class="edrea_tm_hero_header">
-				<div class="edrea_tm_universal_box_wrap">
-					<div class="bg_wrap">
-						<div class="overlay_image hero jarallax" data-speed="0"></div>
-						<div class="overlay_video"></div>
-						<div class="overlay_color hero"></div>
-					</div>
-					<div class="content hero">
-						<div class="container hero">
-							<div class="edrea_tm_hero_title">
-								<p class="animate"><span class="another">I'm</span> <span class="edrea_tm_animation_text_word"></span></p>
-								<div class="edrea_tm_hero_share">
-									<ul>
-										<li><a href="#"><i class="xcon-facebook"></i></a></li>
-										<li><a href="#"><i class="xcon-twitter"></i></a></li>
-										<li><a href="#"><i class="xcon-linkedin"></i></a></li>
-										<li><a href="#"><i class="xcon-instagram"></i></a></li>
-										<li><a href="#"><i class="xcon-behance"></i></a></li>
-									</ul>
-								</div>
-							</div>
-							<div class="edrea_tm_arrow_wrap bounce anchor">
-								<a href="#about"><i class="xcon-angle-double-down"></i></a>
-							</div>
+				<div class="edrea_tm_universal_box_wrap particle jarallax" data-speed="0">
+					<div id="particles-js"></div> 
+					<div class="particle_overlay"></div>
+					<div class="edrea_tm_hero_title">
+						<p class="animate"><span class="another">I'm</span> <span class="edrea_tm_animation_text_word"></span></p>
+						<div class="edrea_tm_hero_share">
+							<ul>
+								<li><a href="#"><i class="xcon-facebook"></i></a></li>
+								<li><a href="#"><i class="xcon-twitter"></i></a></li>
+								<li><a href="#"><i class="xcon-linkedin"></i></a></li>
+								<li><a href="#"><i class="xcon-instagram"></i></a></li>
+								<li><a href="#"><i class="xcon-behance"></i></a></li>
+							</ul>
 						</div>
+					</div>
+					<div class="edrea_tm_arrow_wrap bounce anchor">
+						<a href="#about"><i class="xcon-angle-double-down"></i></a>
 					</div>
 				</div>
 				<div class="svg shape">
@@ -621,7 +614,7 @@
  	
  	 <a class="edrea_tm_totop" href="#"></a> 
  	 
- 	 <!-- AUDIOBOX -->
+ 	  <!-- AUDIOBOX -->
 	<div class="edrea_tm_audio_wrap">
 		<audio class="edrea_tm_myaudio">
 			<source src="audio/1.mp3" type="audio/mp3">
