--- a/index-4.html
+++ b/index-4.html
@@ -28,7 +28,7 @@
 <body>
 
 <!-- WRAPPER ALL -->
-<div class="edrea_tm_wrapper_all" data-audio="on">
+<div class="edrea_tm_wrapper_all" data-audio="off">
 
 	<div id="edrea_tm_popup_blog">
 		<div class="container">
@@ -58,7 +58,7 @@
 			<div class="container">
 				<div class="navigation_inner">
 					<div class="logo">
-						<a class="light_logo" href="index.html"><img src="img/logo/logo.png" alt="" /></a>
+						<a class="light_logo" href="index-4.html"><img src="img/logo/logo.png" alt="" /></a>
 					</div>
 					<div class="nav_list_wrap">
 						<div class="menu">
@@ -108,9 +108,13 @@
 			<div class="edrea_tm_hero_header">
 				<div class="edrea_tm_universal_box_wrap">
 					<div class="bg_wrap">
-						<div class="overlay_image hero jarallax" data-speed="0"></div>
-						<div class="overlay_video"></div>
-						<div class="overlay_color hero"></div>
+						<div class="overlay_image"></div>
+						<div class="overlay_video">
+							<video autoplay loop muted>
+								<source src="video/1.mp4" type="video/mp4">
+							</video>						
+						</div>
+						<div class="overlay_color video"></div>
 					</div>
 					<div class="content hero">
 						<div class="container hero">
@@ -621,7 +625,7 @@
  	
  	 <a class="edrea_tm_totop" href="#"></a> 
  	 
- 	 <!-- AUDIOBOX -->
+ 	  <!-- AUDIOBOX -->
 	<div class="edrea_tm_audio_wrap">
 		<audio class="edrea_tm_myaudio">
 			<source src="audio/1.mp3" type="audio/mp3">
