--- a/index-5.html
+++ b/index-5.html
@@ -28,7 +28,7 @@
 <body>
 
 <!-- WRAPPER ALL -->
-<div class="edrea_tm_wrapper_all" data-audio="on">
+<div class="edrea_tm_wrapper_all" data-audio="off">
 
 	<div id="edrea_tm_popup_blog">
 		<div class="container">
@@ -58,7 +58,7 @@
 			<div class="container">
 				<div class="navigation_inner">
 					<div class="logo">
-						<a class="light_logo" href="index.html"><img src="img/logo/logo.png" alt="" /></a>
+						<a class="light_logo" href="index-5.html"><img src="img/logo/logo.png" alt="" /></a>
 					</div>
 					<div class="nav_list_wrap">
 						<div class="menu">
@@ -113,23 +113,17 @@
 						<div class="overlay_color hero"></div>
 					</div>
 					<div class="content hero">
-						<div class="container hero">
-							<div class="edrea_tm_hero_title">
-								<p class="animate"><span class="another">I'm</span> <span class="edrea_tm_animation_text_word"></span></p>
-								<div class="edrea_tm_hero_share">
-									<ul>
-										<li><a href="#"><i class="xcon-facebook"></i></a></li>
-										<li><a href="#"><i class="xcon-twitter"></i></a></li>
-										<li><a href="#"><i class="xcon-linkedin"></i></a></li>
-										<li><a href="#"><i class="xcon-instagram"></i></a></li>
-										<li><a href="#"><i class="xcon-behance"></i></a></li>
-									</ul>
+							<div class="marketify_text_slideshow">
+								<div class="fn_text_slideshow" data-effect="fx2" data-interval="4000"> <!-- fx1...fx18, min 2000... max 10000 -->
+									<div class="slide current"><h2 class="title">Edrea</h2></div>
+									<div class="slide"><h2 class="title">Awesome</h2></div>
+									<div class="slide"><h2 class="title">Creative</h2></div>
+									<div class="slide"><h2 class="title">Template</h2></div>
 								</div>
 							</div>
 							<div class="edrea_tm_arrow_wrap bounce anchor">
 								<a href="#about"><i class="xcon-angle-double-down"></i></a>
 							</div>
-						</div>
 					</div>
 				</div>
 				<div class="svg shape">
@@ -621,7 +615,7 @@
  	
  	 <a class="edrea_tm_totop" href="#"></a> 
  	 
- 	 <!-- AUDIOBOX -->
+ 	  <!-- AUDIOBOX -->
 	<div class="edrea_tm_audio_wrap">
 		<audio class="edrea_tm_myaudio">
 			<source src="audio/1.mp3" type="audio/mp3">
