--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>Edrea HTML 5 Template</title>
+<title>Gapura Koi</title>
 
 <!-- STYLES -->
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
@@ -64,7 +64,6 @@
 						<div class="menu">
 							<ul class="anchor_nav">
 								<li><a href="#home">Home</a></li>
-								<li><a href="#about">About</a></li>
 								<li><a href="#services">Services</a></li>
 								<li><a href="#portfolio">Portfolio</a></li>
 								<li><a href="#news">News</a></li>
@@ -89,7 +88,6 @@
    			<div class="mob_menu">
 				<ul class="anchor_nav">
 					<li><a href="#home">Home</a></li>
-					<li><a href="#about">About</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#news">News</a></li>
@@ -115,7 +113,7 @@
 					<div class="content hero">
 						<div class="container hero">
 							<div class="edrea_tm_hero_title">
-								<p class="animate"><span class="another">I'm</span> <span class="edrea_tm_animation_text_word"></span></p>
+								<p class="animate"><span class="another">KAMI</span> <span class="edrea_tm_animation_text_word"></span></p>
 								<div class="edrea_tm_hero_share">
 									<ul>
 										<li><a href="#"><i class="xcon-facebook"></i></a></li>
@@ -140,81 +138,6 @@
 			</div>
 		</div>
 		<!-- /HERO -->
-
-		<!-- ABOUT -->
-		<div class="edrea_tm_section relative" id="about">
-			<div class="edrea_tm_about_wrapper_all">
-				<div class="container">
-					<div class="edrea_tm_about_wrap">
-						<div class="author_wrap">
-							<div class="leftbox">
-								<div class="about_image_wrap parallax" data-relative-input="true">
-									<div class="image layer" data-depth="0.1">
-										<img src="img/about/550x640.jpg" alt="" />
-										<div class="inner"></div>
-									</div>
-									<div class="border layer" data-depth="0.2">
-										<img src="img/about/550x640.jpg" alt="" />
-										<div class="inner"></div>
-									</div>
-								</div>
-								
-							</div>
-							<div class="rightbox">
-								<div class="edrea_tm_main_title_holder">
-									<h3><span>About Me</span></h3>
-								</div>
-								<div class="definition">
-									<p>Hi! My name is <strong>Edrea Kennedy</strong>. I am a graphic designer, and I'm very passionate and dedicated to my work. With 20 years experience as a professional graphic designer, I have acquired the skills and knowledge necessary to make your project a success. I enjoy every step of the design process, from discussion and collaboration to concept and execution, but I find the most satisfaction in seeing the finished product do everything for you that it was created to do.</p>
-								</div>
-								<div class="progress_bar_wrap_total">
-									<div class="edrea_tm_progress_wrap" data-size="small" data-round="c" data-strip="off">
-										<div class="edrea_tm_progress" data-value="95" data-color="#000">
-											<span><span class="label">Web Development</span><span class="number">95%</span></span>
-											<div class="edrea_tm_bar_bg"><div class="edrea_tm_bar_wrap"><div class="edrea_tm_bar"></div></div></div>
-										</div>
-										<div class="edrea_tm_progress" data-value="85" data-color="#000">
-											<span><span class="label">Photoshop</span><span class="number">85%</span></span>
-											<div class="edrea_tm_bar_bg"><div class="edrea_tm_bar_wrap"><div class="edrea_tm_bar"></div></div></div>
-										</div>
-										<div class="edrea_tm_progress" data-value="75" data-color="#000">
-											<span><span class="label">3D MAX</span><span class="number">75%</span></span>
-											<div class="edrea_tm_bar_bg"><div class="edrea_tm_bar_wrap"><div class="edrea_tm_bar"></div></div></div>
-										</div>
-									</div>
-								</div>
-								<div class="about_short_contact_wrap">
-									<ul>
-										<li>
-											<span><label>Phone:</label> +77 022 177 05 05</span>
-										</li>
-										<li>
-											<span><label>Mail:</label> <a href="mailto:example@gmail.com">example&#64;gmail.com</a></span>
-										</li>
-									</ul>
-								</div>
-								<div class="buttons_wrap">
-									<ul>
-										<li>
-											<a href="index.html"><span>Download CV</span></a>
-										</li>
-										<li class="anchor">
-											<a href="#contact"><span>Send Message</span></a>
-										</li>
-									</ul>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="svg shape another">
-					<svg x="0px" y="0px" viewBox="0 186.5 1920 113.5">
-						<polygon points="-30,300 355.167,210.5 1432.5,290 1920,198.5 1920,300"></polygon>
-					</svg>
-				</div>
-			</div>
-		</div>
-		<!-- /ABOUT -->
 		
 		<!-- SERVICES -->
 		<div class="edrea_tm_section relative" id="services">
