--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
    		<div class="edrea_tm_mobile_menu_wrap">
    			<div class="mob_menu">
 				<ul class="anchor_nav">
-					<li><a href="#home">Home</a></li>
+					<li><a href="#home">Beranda</a></li>
 					<li><a href="#services">Services</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#news">News</a></li>
