--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 					<div class="nav_list_wrap">
 						<div class="menu">
 							<ul class="anchor_nav">
-								<li><a href="#home">Home</a></li>
+								<li><a href="#home">Beranda</a></li>
 								<li><a href="#services">Services</a></li>
 								<li><a href="#portfolio">Portfolio</a></li>
 								<li><a href="#news">News</a></li>
