--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
 						<div class="menu">
 							<ul class="anchor_nav">
 								<li><a href="#home">Beranda</a></li>
-								<li><a href="#services">Services</a></li>
+								<li><a href="#services">Layanan</a></li>
 								<li><a href="#portfolio">Portfolio</a></li>
-								<li><a href="#news">News</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="#news">Blog</a></li>
+								<li><a href="#contact">Kontak</a></li>
 							</ul>
 						</div>
 					</div>
@@ -88,10 +88,10 @@
    			<div class="mob_menu">
 				<ul class="anchor_nav">
 					<li><a href="#home">Beranda</a></li>
-					<li><a href="#services">Services</a></li>
+					<li><a href="#services">Layanan</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#news">News</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#news">Blog</a></li>
+					<li><a href="#contact">Kontak</a></li>
 				</ul>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 			<div class="edrea_tm_service_wrapper_all">
 				<div class="container">
 					<div class="edrea_tm_main_title_holder">
-						<h3><span>Amazing Services</span></h3>
+						<h3><span>Jenis Ikan Koi Yang Kami Jual</span></h3>
 					</div>
 					<div class="edrea_tm_services_wrap edrea_tm_miniboxes">
 						<div class="carousel_nav">
