--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
 									<a class="link_service" href="#"></a>
 									<div class="overlay"></div>
 									<div class="texts_wrap">
-										<h3 class="service_title">Web Development</h3>
-										<p class="short_definition">Web development is the work involved in developing a web site for the Internet (World Wide Web) or an intranet (a private network).</p>
+										<h3 class="service_title">Kohaku</h3>
+										<p class="short_definition">Merupakan jenis ikan tertua, hasil dari persilangan ikan koi Magoi dan Shirogoi. Ikan Kohaku umumnya memiliki dua warna yaitu merah dan putih.</p>
 										<div class="full_definition">
 											<div class="rows">
 												<p>Web development is the work involved in developing a web site for the Internet (World Wide Web) or an intranet (a private network). Web development can range from developing a simple single static page of plain text to complex web-based internet applications (web apps) electronic businesses, and social network services. A more comprehensive list of tasks to which web development commonly refers, may include web engineering, web design, web content development, client liaison, client-side/server-side scripting, web server and network security configuration, and e-commerce development. Among web professionals, "web development" usually refers to the main non-design aspects of building web sites: writing markup and coding. Most recently Web development has come to mean the creation of content management systems (CMS). These CMS can be made from scratch, proprietary or open source. In broad terms the CMS acts as middleware between the database and the user through the browser. A principle benefit of a CMS is that it allows non-technical people to make changes to their web site without having technical knowledge.</p>
@@ -196,8 +196,8 @@
 									<a class="link_service" href="#"></a>
 									<div class="overlay"></div>
 									<div class="texts_wrap">
-										<h3 class="service_title">Photography</h3>
-										<p class="short_definition">Photography is the art, application and practice of creating durable images by recording light or other electromagnetic radiation.</p>
+										<h3 class="service_title">Taisho Sanshoku (sanke)</h3>
+										<p class="short_definition">Taisho Sanshoku termasuk jenis ikan koi tertua yang banyak diburu kolektor ikan koi. Ikan ini merupakan persilangan ikan koi corak hitam kuning dengan kohaku. Taisho Sanshoku memiliki warna dasar hitam, putih, dan merah.</p>
 										<div class="full_definition">
 											<div class="rows">
 												<p>Photography is the art, application and practice of creating durable images by recording light or other electromagnetic radiation, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film. It is employed in many fields of science, manufacturing (e.g., photolithography), and business, as well as its more direct uses for art, film and video production, recreational purposes, hobby, and mass communication. Typically, a lens is used to focus the light reflected or emitted from objects into a real image on the light-sensitive surface inside a camera during a timed exposure. With an electronic image sensor, this produces an electrical charge at each pixel, which is electronically processed and stored in a digital image file for subsequent display or processing. The result with photographic emulsion is an invisible latent image, which is later chemically "developed" into a visible image, either negative or positive depending on the purpose of the photographic material and the method of processing. A negative image on film is traditionally used to photographically create a positive image on a paper base, known as a print, either by using an enlarger or by contact printing.</p>
@@ -243,8 +243,8 @@
 									<a class="link_service" href="#"></a>
 									<div class="overlay"></div>
 									<div class="texts_wrap">
-										<h3 class="service_title">Social Media</h3>
-										<p class="short_definition">Social media are interactive computer-mediated technologies that facilitate the creation and sharing of information, ideas, and careers.</p>
+										<h3 class="service_title">Bekko</h3>
+										<p class="short_definition">Mengutip dari jualikankoi.co.id, ikan koi Bekko dibagi menjadi tiga yaitu Koi Shiro Bekko, Koi Ki Bekko, dan Koi Aka Bekko.</p>
 										<div class="full_definition">
 											<div class="rows">
 												<p>Users typically access social media services via web-based technologies on desktops and laptops, or download services that offer social media functionality to their mobile devices (e.g., smartphones and tablets). When engaging with these services, users can create highly interactive platforms through which individuals, communities, and organizations can share, co-create, discuss, and modify user-generated content or pre-made content posted online. They "introduce substantial and pervasive changes to communication between organizations, communities, and individuals." Social media changes the way individuals and large organizations communicate. These changes are the focus of the emerging fields of technoself studies. Social media differ from paper-based media (e.g., magazines and newspapers) to traditional electronic media such as TV broadcasting in many ways, including quality,reach, frequency, interactivity, usability, immediacy, and performance. Social media outlets operate in a dialogic transmission system (many sources to many receivers).This is in contrast to traditional media which operates under a monologic transmission model (one source to many receivers), such as a newspaper which is delivered to many subscribers, or a radio station which broadcasts the same programs to an entire city. Some of the most popular social media websites are Baidu Tieba, Facebook (and its associated Facebook Messenger), Google+, Myspace, Instagram, LinkedIn, Pinterest, Snapchat, Tumblr, Twitter, Viber, VK, WeChat, Weibo, WhatsApp, and Wikia. These social media websites have more than 100,000,000 registered users.</p>
@@ -293,14 +293,14 @@
 				<div class="container">
 					<div class="edrea_tm_portfolio_wrap">
 						<div class="edrea_tm_main_title_holder portfolio">
-							<h3><span>Awesome Works</span></h3>
+							<h3><span>Galeri Photo</span></h3>
 						</div>
 						<div class="edrea_tm_portfolio_titles"></div>
 						<ul class="edrea_tm_portfolio_filter">
-							<li><a href="#" class="current" data-filter="*">All</a></li>
-							<li><a href="#" data-filter=".design">Design</a></li>
-							<li><a href="#" data-filter=".photography">Photography</a></li>
-							<li><a href="#" data-filter=".development">Development</a></li>
+							<li><a href="#" class="current" data-filter="*">Semua</a></li>
+							<li><a href="#" data-filter=".design">Kohaku</a></li>
+							<li><a href="#" data-filter=".photography">Showa</a></li>
+							<li><a href="#" data-filter=".development">Sanke</a></li>
 						</ul>
 						<ul class="edrea_tm_portfolio_list gallery_zoom">
 							<li class="design">
